# aiobbox

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
aiobbox/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  integration.py  test_client.py  test_models.py
